# AddLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: AddLibConfig.cmake.in
include/: Add.h
src/: Add.cpp
